tests/ui/impl-trait/recursive-impl-trait-type-direct.stderr
error: undefined opaque type
  --> $DIR/recursive-impl-trait-type-direct.rs:3:14
   |
LL | fn test() -> impl Sized {
   |              ^^^^^^^^^^

error: aborting due to 1 previous error

