tests/ui/impl-trait/recursive-impl-trait-type-direct.rs
#![allow(unconditional_recursion)]

fn test() -> impl Sized {
    //~^ ERROR undefined opaque type
    test()
}

fn main() {}
